frontend/test/should_fail/method_model_inh_ovrrd_failef.grg
#using "method_model_inh_ovrrd_failef.gm"
